--- a/src/app/pages/users/users/users.component.html
+++ b/src/app/pages/users/users/users.component.html
@@ -43,7 +43,7 @@
         <span class="badge" *ngIf="getActiveFiltersCount() > 0">{{
           getActiveFiltersCount()
         }}</span>
-        <span class="shine"></span>
+        <!-- <span class="shine"></span> -->
       </button>
 
       <!-- Filter Panel -->
