--- a/src/app/pages/products/modals/product-details-modal/product-details-modal.component.html
+++ b/src/app/pages/products/modals/product-details-modal/product-details-modal.component.html
@@ -171,6 +171,10 @@
                   </span>
                 </div>
               </div>
+              <div class="info-item">
+                <label class="info-label">الكميه</label>
+                <div class="info-value price-value">{{ product.quantity }}</div>
+              </div>
             </div>
           </div>
 
