--- a/src/app/pages/products/modals/product-modal/product-modal.component.html
+++ b/src/app/pages/products/modals/product-modal/product-modal.component.html
@@ -56,7 +56,11 @@
                     >
                       <i class="material-icons">delete</i>
                     </button>
-                    <button type="button" class="change-image-button" (click)="triggerMainImageInput()">
+                    <button
+                      type="button"
+                      class="change-image-button"
+                      (click)="triggerMainImageInput()"
+                    >
                       <i class="material-icons">edit</i>
                       <span>تغيير الصورة</span>
                     </button>
@@ -135,7 +139,9 @@
                       <button
                         type="button"
                         class="remove-button"
-                        (click)="removeAdditionalMedia(preview.originalIndex ?? i)"
+                        (click)="
+                          removeAdditionalMedia(preview.originalIndex ?? i)
+                        "
                       >
                         <i class="material-icons">delete</i>
                       </button>
@@ -189,7 +195,9 @@
                       <button
                         type="button"
                         class="remove-button"
-                        (click)="removeAdditionalMedia(preview.originalIndex ?? i)"
+                        (click)="
+                          removeAdditionalMedia(preview.originalIndex ?? i)
+                        "
                       >
                         <i class="material-icons">delete</i>
                       </button>
@@ -245,7 +253,9 @@
                       <button
                         type="button"
                         class="remove-button"
-                        (click)="removeAdditionalMedia(preview.originalIndex ?? i)"
+                        (click)="
+                          removeAdditionalMedia(preview.originalIndex ?? i)
+                        "
                       >
                         <i class="material-icons">delete</i>
                       </button>
@@ -382,6 +392,22 @@
                     <option value="إيجار">إيجار</option>
                     <option value="إيجار وشراء">إيجار وشراء</option>
                   </select>
+                </div>
+                <div class="form-group">
+                  <label class="form-label">
+                    <span>الكميه</span>
+                    <span class="required-indicator">*</span>
+                  </label>
+                  <input
+                    type="number"
+                    [(ngModel)]="formData.quantity"
+                    name="quantity"
+                    required
+                    class="form-input"
+                    placeholder="أدخل الكميه"
+                    (focus)="onInputFocus($event)"
+                    (blur)="onInputBlur($event)"
+                  />
                 </div>
               </div>
               <div class="form-group full-width">
