--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -115,7 +115,29 @@
                   <i class="material-icons">close</i>
                 </button>
               </div>
+              <!-- Brand Filter -->
+              <div class="filter-tag" *ngIf="brandFilter">
+                <div class="tag-icon">
+                  <i class="material-icons">branding_watermark</i>
+                </div>
+                <span class="tag-label">البراند:</span>
+                <span class="tag-value">{{ brandFilter }}</span>
+                <button class="tag-remove" (click)="onBrandFilterChange('')">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
 
+              <!-- Model Filter -->
+          <div class="filter-tag" *ngIf="modelFilter">
+            <div class="tag-icon">
+              <i class="material-icons">toys</i>
+            </div>
+            <span class="tag-label">الموديل:</span>
+            <span class="tag-value">{{ modelFilter }}</span>
+            <button class="tag-remove" (click)="onModelFilterChange('')">
+              <i class="material-icons">close</i>
+            </button>
+          </div>
               <div
                 *ngFor="let attr of getActiveAttributeFilters()"
                 class="filter-tag"
