--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
   </nav>
 
   <div class="sidebar-footer">
-    <a routerLink="/settings" routerLinkActive="active" title="الإعدادات">
+    <a routerLink="/admin/settings" routerLinkActive="active" title="الإعدادات">
       <span class="material-icons icon">settings</span>
       <span class="label" *ngIf="!isCollapsed">الإعدادات</span>
     </a>
