--- a/src/app/components/notification/notification-card/notification-card.component.scss
+++ b/src/app/components/notification/notification-card/notification-card.component.scss
@@ -38,7 +38,7 @@ $gray-900: #111827;
     border-right: 4px solid $success;
 
     .notification-icon {
-      background: linear-gradient(135deg, $success 0%, darken($success, 10%) 100%);
+      background: linear-gradient(135deg, $success 0%,  ($success, 10%) 100%);
       color: $white;
     }
 
@@ -51,7 +51,7 @@ $gray-900: #111827;
     border-right: 4px solid $error;
 
     .notification-icon {
-      background: linear-gradient(135deg, $error 0%, darken($error, 10%) 100%);
+      background: linear-gradient(135deg, $error 0%,  ($error, 10%) 100%);
       color: $white;
     }
 
@@ -64,7 +64,7 @@ $gray-900: #111827;
     border-right: 4px solid $warning;
 
     .notification-icon {
-      background: linear-gradient(135deg, $warning 0%, darken($warning, 10%) 100%);
+      background: linear-gradient(135deg, $warning 0%,  ($warning, 10%) 100%);
       color: $white;
     }
 
@@ -77,7 +77,7 @@ $gray-900: #111827;
     border-right: 4px solid $info;
 
     .notification-icon {
-      background: linear-gradient(135deg, $info 0%, darken($info, 10%) 100%);
+      background: linear-gradient(135deg, $info 0%,  ($info, 10%) 100%);
       color: $white;
     }
 
