--- a/src/app/pages/products/modals/product-modal/product-modal.component.scss
+++ b/src/app/pages/products/modals/product-modal/product-modal.component.scss
@@ -285,9 +285,9 @@ $gray-900: #111827;
   display: flex;
   align-items: center;
   justify-content: center;
-  opacity: 0; 
+  opacity: 0;
   transition: opacity 0.3s ease;
-  
+
   &:hover {
     opacity: 1;
   }
@@ -309,7 +309,7 @@ $gray-900: #111827;
   transition: all 0.2s ease;
 
   &:hover {
-    background: darken($danger, 10%);
+    background:  ($danger, 10%);
     transform: scale(1.05);
   }
 
@@ -334,7 +334,7 @@ $gray-900: #111827;
   margin-right: 25px;
 
   &:hover {
-    background: darken($secondary, 10%);
+    background:  ($secondary, 10%);
     transform: scale(1.05);
   }
 
