--- a/src/app/pages/orders/orders.component.scss
+++ b/src/app/pages/orders/orders.component.scss
@@ -116,13 +116,13 @@
     top: 0;
     left: -100%;
     width: 100%;
-    height: 100%;
     background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
     transition: left 0.6s ease;
   }
 
   &:hover .btn-shine {
     left: 100%;
+    height: 100%;
   }
 
   @media (max-width: 767px) {
@@ -322,7 +322,7 @@
   padding: 20px 32px;
   flex: 1;
   overflow-y: auto;
-  max-height: calc(90vh - 180px);
+  min-height: calc(90vh - 180px);
 }
 
 /* Active Filters Summary */
